--- a/css/globals.css
+++ b/css/globals.css
@@ -98,6 +98,32 @@ button:active {
   transition: 0.2s;
 }
 
+a {
+  background-color: #66bfbf;
+  color: #ffffff;
+  border: 3px solid #66bfbf;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 1em;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: #ffffff;
+  color: #66bfbf;
+  border: 3px solid #66bfbf;
+  transition: 0.2s;
+}
+
+a:active {
+  background-color: #66bfbf;
+  color: #ffffff;
+  border: 3px solid #66bfbf;
+  transition: 0.2s;
+}
+
 .footer {
   height: 2em;
   background-color: #eaf6f6;
